--- a/queries/aws-queries.yaml
+++ b/queries/aws-queries.yaml
@@ -1,8 +1,16 @@
 check_mfa:
   description: "Check users with MFA enabled/disabled"
   query: |
-    select name, title, user_id, mfa_enabled
-    from aws_iam_user;
+    select
+      name,
+      title,
+      user_id,
+      mfa_enabled
+    from
+      aws_iam_user
+    where
+      password_last_used is not null
+      and mfa_enabled = false;
 
 check_port_ranges:
   description: "Check if the security groups allow inbound traffic from any IP and have rules permitting traffic over port ranges."
