Flag Lambda functions with sensitive env vars

--- a/queries/aws/index.yml
+++ b/queries/aws/index.yml
@@ -20,3 +20,5 @@ queries:
     - "s3/buckets-without-encryption.yml"
     - "s3/buckets-without-versioning.yml"
     - "s3/public-buckets.yml"
+  lambda:
+    - "lambda/lambda-function-configurations.yml"
